--- a/data-model/model.html
+++ b/data-model/model.html
@@ -42,7 +42,10 @@
 </ul>
 </li>
 <li class="nav-item dropdown">
-<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Configs</a>
+<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Framework</a>
+<ul class="dropdown-menu">
+<li class="dropdown-submenu">
+<a class="dropdown-item" href="#">Configs</a>
 <ul class="dropdown-menu">
 <li>
 <a class="dropdown-item" href="../configs/hourly_generation_by_energy_source.html">Hourly Generation</a>
@@ -52,30 +55,60 @@
 </li>
 </ul>
 </li>
-<li class="nav-item dropdown">
-<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Fetch</a>
+<li class="dropdown-submenu">
+<a class="dropdown-item" href="#">Fetch</a>
 <ul class="dropdown-menu">
 <li>
 <a class="dropdown-item" href="../fetch/provider/EIA.html">EIA</a>
 </li>
 </ul>
 </li>
-<li class="nav-item dropdown">
-<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Ingest</a>
+<li class="dropdown-submenu">
+<a class="dropdown-item" href="#">Ingest</a>
 <ul class="dropdown-menu">
 <li>
 <a class="dropdown-item" href="../ingest/provider/xata.html">XATA</a>
 </li>
 </ul>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="../main.html">Main Logic</a>
+<li>
+<a class="dropdown-item" href="../main.html">Main Logic</a>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="../utils.html">Utilities</a>
+<li>
+<a class="dropdown-item" href="../utils.html">Utilities</a>
+</li>
+</ul>
 </li>
 <li class="nav-item">
 <a aria-current="page" class="nav-link active" href="model.html">Data Model</a>
+</li>
+<li class="nav-item dropdown">
+<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Blogs</a>
+<ul class="dropdown-menu">
+<li>
+<a class="dropdown-item" href="../blogs/blog1.html">Electricity to Customers</a>
+</li>
+<li>
+<a class="dropdown-item" href="../blogs/blog2.html">Wind and Solar Growth</a>
+</li>
+<li>
+<a class="dropdown-item" href="../blogs/blog3.html">Net Importer to Net Exporter</a>
+</li>
+<li>
+<a class="dropdown-item" href="../blogs/blog4.html">Energy Consumption by Sector</a>
+</li>
+</ul>
+</li>
+<li class="nav-item dropdown">
+<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Dashboard</a>
+<ul class="dropdown-menu">
+<li>
+<a class="dropdown-item" href="../Dashboard/generation.html">Electricity Generation</a>
+</li>
+<li>
+<a class="dropdown-item" href="../Dashboard/consumption.html">Electricity Consumption</a>
+</li>
+</ul>
 </li>
 </ul>
 <ul class="nav navbar-nav ms-md-auto">
@@ -90,7 +123,7 @@
                                 </a>
 </li>
 <li class="nav-item">
-<a class="nav-link disabled" rel="next">
+<a class="nav-link" href="../blogs/blog1.html" rel="next">
                                     Next <i class="fa fa-arrow-right"></i>
 </a>
 </li>
