--- a/data-model/model.html
+++ b/data-model/model.html
@@ -108,6 +108,9 @@
 <li>
 <a class="dropdown-item" href="../Dashboard/consumption.html">Electricity Consumption</a>
 </li>
+<li>
+<a class="dropdown-item" href="../Dashboard/overview.html">Overview</a>
+</li>
 </ul>
 </li>
 </ul>
