--- a/utils.html
+++ b/utils.html
@@ -129,6 +129,10 @@
 <li>
     <a href="Dashboard/consumption.html" class="dropdown-item">Electricity Consumption</a>
 </li>
+                                    
+<li>
+    <a href="Dashboard/overview.html" class="dropdown-item">Overview</a>
+</li>
                                 </ul>
                             </li>
                         </ul>
