--- a/Dashboard/generation.html
+++ b/Dashboard/generation.html
@@ -234,7 +234,7 @@
 
 <h1 id="energy-generation-in-us-region-power-bi-dashboard-overview"><strong>Energy Generation in US Region - Power BI Dashboard Overview</strong></h1>
 <p><img alt="Generation-Dashboard" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/generation%20dashboard.png?raw=true" /></p>
-<p>This Power BI dashboard titled "Energy Generation in US Region" presents an analysis of electricity generation from various sources across different U.S. regions, distinguishing between renewable and non-renewable sources. Below is a breakdown of each visual, along with descriptions and trend analysis.</p>
+<p>This Power BI dashboard titled "Energy Generation in US Region" presents an analysis of electricity generation from various sources across different U.S. regions, distinguishing between renewable and non-renewable sources. </p>
 <hr />
 <h2 id="total-generation-mwh"><strong>Total Generation (MWh)</strong></h2>
 <p><img alt="Total Generation" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/Total%20Card.png?raw=true" /></p>
