--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -205,6 +205,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-bs-level="2"><a href="#references" class="nav-link">References</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -269,7 +273,14 @@
 </ul>
 <p>These challenges are major considerations in ensuring that the electrical grid remains reliable, efficient, and resilient for the future.</p>
 <hr />
-<p>Understanding how the electricity grid works, the sources of power, and the intricate systems that keep the power flowing is essential for navigating the future of energy. With efforts to upgrade infrastructure, integrate renewable energy, and address emerging security concerns, the future of the U.S. power grid will play a crucial role in shaping the nation’s energy landscape.</p></div>
+<p>Understanding how the electricity grid works, the sources of power, and the intricate systems that keep the power flowing is essential for navigating the future of energy. With efforts to upgrade infrastructure, integrate renewable energy, and address emerging security concerns, the future of the U.S. power grid will play a crucial role in shaping the nation’s energy landscape.</p>
+<hr />
+<h2 id="references"><strong>References</strong></h2>
+<ul>
+<li><a href="https://www.eia.gov/energyexplained/electricity/delivery-to-consumers.php">Delivery of Electricity to Consumers - EIA</a></li>
+<li><a href="https://www.customtruck.com/blog/how-electricity-is-delivered-to-customers/">How Electricity is Delivered to Customers - Custom Truck</a></li>
+<li><a href="https://www.eia.gov/energyexplained/electricity/delivery-to-consumers.php#:~:text=In%20the%20United%20States%2C%20the,electricity%20customers%20across%20the%20country.">Delivery of Electricity to Consumers (EIA)</a></li>
+</ul></div>
             </div>
         </div>
 
