--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -185,6 +185,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-bs-level="2"><a href="#references" class="nav-link">References</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -225,7 +229,13 @@
 <p>This rise in renewable energy signifies a major shift in the U.S. energy profile, with solar and wind taking center stage as the country reduces its reliance on fossil fuels and moves toward clean energy goals.</p>
 <hr />
 <p>The future of U.S. power generation is bright, with wind and solar leading the way toward a cleaner, more sustainable, and affordable energy grid. As technology advances and policy support strengthens, the U.S. will continue to build on these trends to meet its renewable energy goals and contribute to a global shift toward cleaner energy.</p>
-<p><img alt="annual gen capacity" src="https://github.com/tanishq-h/repo/blob/b2/images/annual%20gen%20capacity.png?raw=true" /></p></div>
+<p><img alt="annual gen capacity" src="https://github.com/tanishq-h/repo/blob/b2/images/annual%20gen%20capacity.png?raw=true" /></p>
+<hr />
+<h2 id="references"><strong>References</strong></h2>
+<ul>
+<li><a href="https://www.climatecentral.org/report/solar-and-wind-power-2024">Solar and Wind Power in 2024 - Climate Central</a></li>
+<li><a href="https://www.eia.gov/todayinenergy/detail.php?id=61242#:~:text=As%20a%20result%20of%20new,476%20billion%20kWh%20in%202025.">EIA Today in Energy - Renewable Energy Growth</a></li>
+</ul></div>
             </div>
         </div>
 
