--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -189,6 +189,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-bs-level="2"><a href="#references" class="nav-link">References</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -226,7 +230,15 @@
 <p>Although the United States has remained a net exporter of coal since 1949, there does seem to be a visible trend of late in the export dynamics of coal from that region. Gross coal exports decreased by 19.7% between 2018 and 2019, thus showing an inability to sustain trading partnerships. Of course, such a phenomenon resonates with the larger trend toward self-sufficiency adopted by most nations, including the U.S. For instance, during the first eight months of 2018, Indian domestic coal production was growing at 9.8%. At the end of the year, according to Energy World, five power plants with "critical" and "supercritical" coal resources showed healthy reserves.</p>
 <p>However, that is not just a trend in India. The international trend is that exports of US coal to Asia fell by 19.4 percent over the same period, and North America and Europe imported 24.1 percent less coal from the United States. Some cases are quite extreme; take the case of Panama which reduced imports of US coal by 99.5 percent within just one year.</p>
 <p>Such changes indicate a deeper transition in the global energy picture rather than a response in specific individual nations to certain policies or circumstances that have resulted in this fall in US coal exports. In this respect, while countries are filling their own domestic needs with domestic supply, the problem for the US is holding onto the export volumes it had under a relatively inelastic past market.</p>
-<p><img alt="primary overview" src="https://github.com/tanishq-h/repo/blob/b2/images/blog3/primary%20energy%20overview.png?raw=true" /></p></div>
+<p><img alt="primary overview" src="https://github.com/tanishq-h/repo/blob/b2/images/blog3/primary%20energy%20overview.png?raw=true" /></p>
+<hr />
+<h2 id="references"><strong>References</strong></h2>
+<ul>
+<li><a href="https://www.power-technology.com/features/in-numbers-following-the-uss-journey-from-energy-importer-to-power-exporter/">Power Technology Blog</a></li>
+<li><a href="https://www.eia.gov/todayinenergy/detail.php?id=43395#:~:text=Net%20U.S.%20energy%20imports%20have,U.S.%20energy%20trade%20since%201980.">EIA Todays Energy</a></li>
+<li><a href="https://www.eia.gov/energyexplained/us-energy-facts/imports-and-exports.php">EIA Energy Facts</a></li>
+<li><a href="https://commodity.com/blog/states-export-most-energy/">Commodity Blog</a></li>
+</ul></div>
             </div>
         </div>
 
