--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -189,6 +189,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-bs-level="2"><a href="#references" class="nav-link">References</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -236,7 +240,13 @@
 <h2 id="sectoral-distinctions-in-energy-sources"><strong>Sectoral Distinctions in Energy Sources</strong></h2>
 <p>The energy sources employed by a sector are different in degree. For instance, in 2023, for the <strong>transportation sector</strong>, almost <strong>89% of the transported energy consumed</strong> was primary energy, whereas this source accounted for <strong>less than 1%</strong> for the electric power sector.</p>
 <p>The below graph serves to provide the various types and quantities of primary energy sources in the U.S., stating the electric power sector and the energy use sectors and the sales of electric energy by the electric power sector to the energy use sectors.</p>
-<p><img alt="consumption-by-source-and-sector" src="https://github.com/tanishq-h/repo/blob/b2/images/blog4/consumption-by-source-and-sector.png?raw=true" /></p></div>
+<p><img alt="consumption-by-source-and-sector" src="https://github.com/tanishq-h/repo/blob/b2/images/blog4/consumption-by-source-and-sector.png?raw=true" /></p>
+<hr />
+<h2 id="references"><strong>References</strong></h2>
+<ul>
+<li><a href="https://www.e-education.psu.edu/ebf301/node/457">Energy and Environmental Policy - Penn State University</a></li>
+<li><a href="https://www.eia.gov/energyexplained/us-energy-facts/">U.S. Energy Facts - EIA</a></li>
+</ul></div>
             </div>
         </div>
 
