--- a/Dashboard/consumption.html
+++ b/Dashboard/consumption.html
@@ -173,23 +173,43 @@
             
             <li class="nav-item" data-bs-level="1"><a href="#energy-consumption-in-us-states" class="nav-link">Energy Consumption in U.S. States</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-bs-level="2"><a href="#slicers" class="nav-link">Slicers</a>
+            <li class="nav-item" data-bs-level="2"><a href="#yearmonth-slicer" class="nav-link">Year/Month Slicer</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#cards" class="nav-link">Cards</a>
+            <li class="nav-item" data-bs-level="2"><a href="#region-slicer" class="nav-link">Region Slicer</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#line-chart" class="nav-link">Line Chart</a>
+            <li class="nav-item" data-bs-level="2"><a href="#sector-slicer" class="nav-link">Sector Slicer</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#donut-chart" class="nav-link">Donut Chart</a>
+            <li class="nav-item" data-bs-level="2"><a href="#consumption-mwh" class="nav-link">Consumption (MWh)</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#bar-chart" class="nav-link">Bar Chart</a>
+            <li class="nav-item" data-bs-level="2"><a href="#revenue-million-dollars" class="nav-link">Revenue (Million Dollars)</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#average-electricity-rate-dollarsmwh" class="nav-link">Average Electricity Rate (Dollars/MWh)</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#revenue-per-customer-dollars" class="nav-link">Revenue per Customer (Dollars)</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#revenue-growth" class="nav-link">Revenue Growth</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#sector-wise-division" class="nav-link">Sector-Wise Division</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#top-5-states-by-consumption-in-residential-sector" class="nav-link">Top 5 States by Consumption in Residential Sector</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -197,7 +217,11 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#map" class="nav-link">Map</a>
+            <li class="nav-item" data-bs-level="2"><a href="#electricity-price-by-state" class="nav-link">Electricity Price by State</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#kpi" class="nav-link">KPI</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -212,12 +236,11 @@
 <p><img alt="Dashboard" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/consumption-dashboard.png?raw=true" /></p>
 <p>The “<strong>Energy Consumption in US State</strong>” dashboard offers a comprehensive view of energy usage, pricing, and revenue patterns across the U.S. It visualizes key metrics such as total consumption, revenue, average electricity rates, and sector-wise energy distribution, highlighting variations by state and sector. With focused insights on residential consumption and state-level pricing, the dashboard serves as a valuable tool for understanding trends in energy demand, aiding providers, policymakers, and analysts in making informed, data-driven decisions.</p>
 <hr />
-<h2 id="slicers"><strong>Slicers</strong></h2>
-<h3 id="1-yearmonth-slicer"><strong>1. Year/Month Slicer</strong></h3>
+<h2 id="yearmonth-slicer"><strong>Year/Month Slicer</strong></h2>
 <p><img alt="Year/Month Slicer" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/year-month%20slicer.png?raw=true" /></p>
 <p>Enables the selection of a specific date range, allowing users to filter data for any date between 2019 and 2024.</p>
 <hr />
-<h3 id="2-region-slicer"><strong>2. Region Slicer</strong></h3>
+<h2 id="region-slicer"><strong>Region Slicer</strong></h2>
 <p><img alt="Region Slicer" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/region%20slicer.png?raw=true" /></p>
 <p>Allows users to filter data by region, making it easier to view energy metrics for specific areas across the U.S. These regions include:
 - California
@@ -234,7 +257,7 @@
 - Tennessee
 - Texas</p>
 <hr />
-<h3 id="3-sector-slicer"><strong>3. Sector Slicer</strong></h3>
+<h2 id="sector-slicer"><strong>Sector Slicer</strong></h2>
 <p><img alt="Sector Slicer" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/sector%20slicer.png?raw=true" /></p>
 <p>Allows users to pick specific sectors, including:
 - Residential
@@ -243,25 +266,23 @@
 - Transportation
 - Others</p>
 <hr />
-<h2 id="cards"><strong>Cards</strong></h2>
-<h3 id="1-consumption-mwh"><strong>1. Consumption (MWh)</strong></h3>
+<h2 id="consumption-mwh"><strong>Consumption (MWh)</strong></h2>
 <p><img alt="Consumption" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/total%20cons%20card.png?raw=true" /></p>
 <p>This metric shows the total energy consumption, highlighting the high energy demands across various sectors in the U.S.</p>
 <hr />
-<h3 id="2-revenue-million-dollars"><strong>2. Revenue (Million Dollars)</strong></h3>
+<h2 id="revenue-million-dollars"><strong>Revenue (Million Dollars)</strong></h2>
 <p><img alt="Revenue" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/revenue%20card.png?raw=true" /></p>
 <p>The revenue generated reflects income from energy consumption. This revenue data, combined with consumption, could indicate pricing strategies and profitability trends in the energy sector.</p>
 <hr />
-<h3 id="3-average-electricity-rate-dollarsmwh"><strong>3. Average Electricity Rate (Dollars/MWh)</strong></h3>
+<h2 id="average-electricity-rate-dollarsmwh"><strong>Average Electricity Rate (Dollars/MWh)</strong></h2>
 <p><img alt="Average" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/Avg%20card.png?raw=true" /></p>
 <p>This rate shows the cost of electricity per megawatt-hour. It serves as an indicator of energy costs for consumers and can be influenced by various factors such as fuel prices, production costs, and policy changes.</p>
 <hr />
-<h3 id="4-revenue-per-customer-dollars"><strong>4. Revenue per Customer (Dollars)</strong></h3>
+<h2 id="revenue-per-customer-dollars"><strong>Revenue per Customer (Dollars)</strong></h2>
 <p><img alt="Revenue per Customer" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/revenue%20per%20cust%20card.png?raw=true" /></p>
 <p>This metric indicates the revenue generated from electricity consumption per customer. It helps understand the cost distribution and energy pricing across different sectors and regions.</p>
 <hr />
-<h2 id="line-chart"><strong>Line Chart</strong></h2>
-<h3 id="revenue-growth"><strong>Revenue Growth</strong></h3>
+<h2 id="revenue-growth"><strong>Revenue Growth</strong></h2>
 <p><img alt="Revenue Growth" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/line%20chart.png?raw=true" /></p>
 <p>This line chart illustrates the average monthly revenue growth throughout the year.</p>
 <ul>
@@ -273,8 +294,7 @@
 - This seasonal revenue pattern aligns with energy consumption trends, particularly in regions with high air conditioning use during warmer months.
 - The chart can help plan for resource allocation and forecast revenue for similar periods in the future.</p>
 <hr />
-<h2 id="donut-chart"><strong>Donut Chart</strong></h2>
-<h3 id="sector-wise-division"><strong>Sector-Wise Division</strong></h3>
+<h2 id="sector-wise-division"><strong>Sector-Wise Division</strong></h2>
 <p><img alt="Donut Chart" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/donut%20chart.png?raw=true" /></p>
 <p>This chart breaks down energy consumption across sectors, showing the percentage distribution among industrial, residential, and commercial sectors.</p>
 <p><strong>Trend Analysis:</strong>
@@ -282,8 +302,7 @@
 - With residential consumption as the highest, energy providers may focus on efficiency improvements in this sector.
 - Targeted programs and policies could address the needs of residential consumers to manage demand during peak times.</p>
 <hr />
-<h2 id="bar-chart"><strong>Bar Chart</strong></h2>
-<h3 id="top-5-states-by-consumption-in-residential-sector"><strong>Top 5 States by Consumption in Residential Sector</strong></h3>
+<h2 id="top-5-states-by-consumption-in-residential-sector"><strong>Top 5 States by Consumption in Residential Sector</strong></h2>
 <p><img alt="Bar Chart" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/barchart.png?raw=true" /></p>
 <p>This bar chart compares the consumption and the number of residential customers in the top five states (California, Texas, Florida, North Carolina, and Georgia).</p>
 <ul>
@@ -300,8 +319,7 @@
 <li><strong>Tooltip</strong>: Sector-wise contribution in revenue using a pie chart.</li>
 </ul>
 <hr />
-<h2 id="map"><strong>Map</strong></h2>
-<h3 id="electricity-price-by-state"><strong>Electricity Price by State</strong></h3>
+<h2 id="electricity-price-by-state"><strong>Electricity Price by State</strong></h2>
 <p><img alt="Map" src="https://github.com/tanishq-h/repo/blob/b2/images/consumption-dashboard/map.png?raw=true" /></p>
 <p>This map illustrates the electricity price level by state, with shades indicating different price levels.</p>
 <ul>
@@ -311,7 +329,9 @@
 - States with darker shades indicate higher electricity prices. Coastal and densely populated states, like California, tend to have higher prices, likely due to greater demand and different supply dynamics compared to states with lighter shades.
 - Understanding the geographical variation in electricity prices helps highlight areas where consumers bear higher costs.
 - This data can be used to analyze the factors driving these differences, such as fuel type, generation methods, or infrastructure costs, and to explore cost-reduction strategies.</p>
-<hr /></div>
+<hr />
+<h2 id="kpi"><strong>KPI</strong></h2>
+<p>Revenue is a key performance indicator (KPI) on this dashboard, providing insights into the financial impact of energy consumption across various sectors and states. It highlights the total revenue generated from electricity consumption, broken down by states and top sectors. Tracking revenue as a KPI helps assess the profitability of different regions and sectors, supporting strategic planning for energy providers. This metric is crucial for identifying high-revenue areas and understanding economic trends related to energy demand, which can guide future pricing and investment decisions.</p></div>
             </div>
         </div>
 
