--- a/Dashboard/overview.html
+++ b/Dashboard/overview.html
@@ -229,7 +229,7 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="electricity-efficiency-overview-in-us"><strong>Electricity Efficiency Overview in U.S.</strong></h1>
-<p><img alt="Overview" src="https://github.com/tanishq-h/repo/blob/b2/images/overview/overview-dashboard.png?raw=true" /></p>
+<p><img alt="Overview" src="https://github.com/tanishq-h/repo/blob/b2/images/overview/overview-dashboard.jpg?raw=true" /></p>
 <p>This document provides an overview of the <strong>Energy Overview Dashboard</strong> designed to visualize energy generation, consumption, and efficiency trends across various U.S. states and regions. The dashboard uses multiple Power BI components to deliver insights on energy metrics such as generation, consumption, efficiency rates, and seasonal trends, helping stakeholders make informed decisions.</p>
 <hr />
 <h2 id="yearmonth-slicer"><strong>Year/Month Slicer</strong></h2>
