--- a/Dashboard/generation.html
+++ b/Dashboard/generation.html
@@ -233,8 +233,8 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="energy-generation-in-us-region-power-bi-dashboard-overview"><strong>Energy Generation in US Region - Power BI Dashboard Overview</strong></h1>
-<p><img alt="Generation-Dashboard" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/generation%20dashboard.png?raw=true" /></p>
-<p>This Power BI dashboard titled "Energy Generation in US Region" presents an analysis of electricity generation from various sources across different U.S. regions, distinguishing between renewable and non-renewable sources. </p>
+<p><img alt="Generation Dashboard 1" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/generation%20db.png?raw=true" />
+This Power BI dashboard titled "Energy Generation in US Region" presents an analysis of electricity generation from various sources across different U.S. regions, distinguishing between renewable and non-renewable sources. </p>
 <hr />
 <h2 id="total-generation-mwh"><strong>Total Generation (MWh)</strong></h2>
 <p><img alt="Total Generation" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/Total%20Card.png?raw=true" /></p>
@@ -244,7 +244,7 @@
 </ul>
 <hr />
 <h2 id="renewable-generation-mwh"><strong>Renewable Generation (MWh)</strong></h2>
-<p><img alt="Renewable Generation" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/Renewable%20Card.png?raw=true" /></p>
+<p><img alt="Renewable blue" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/Renewable%20blue.png?raw=true" /></p>
 <ul>
 <li><strong>Description</strong>: This card displays the generation from renewable energy sources in megawatt-hours (MWh).</li>
 <li><strong>Trend Analysis</strong>: Although renewable generation has been growing, its contribution remains lower compared to non-renewable sources, indicating that renewable energy adoption has room for further growth across the U.S.</li>
