--- a/Dashboard/generation.html
+++ b/Dashboard/generation.html
@@ -293,7 +293,7 @@ This Power BI dashboard titled "Energy Generation in US Region" presents an anal
 </ul>
 <hr />
 <h2 id="generation-by-energy-source-donut-chart"><strong>Generation by Energy Source (Donut Chart)</strong></h2>
-<p><img alt="Donut" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/Generation%20by%20source%20donut.png?raw=true" /></p>
+<p><img alt="Donut chart" src="https://github.com/tanishq-h/repo/blob/b2/images/generation-dashboard/Generation%20Donut.png?raw=true" /></p>
 <ul>
 <li><strong>Description</strong>: A Donut chart breaks down energy generation by source, showing the proportion of each energy type (e.g., natural gas, nuclear, coal, solar).</li>
 <li><strong>Trend Analysis</strong>: Natural gas (28.97%) and nuclear (21.55%) are the primary sources, while renewable sources like solar and coal have smaller shares. This highlights the dominance of fossil fuels and nuclear energy in the U.S. energy mix.</li>
